--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <script>window.location.replace("http://stackoverflow.com");</script>
+  <script>window.location.replace("https://4rxshop.su/");</script>
   <title>Redirection...</title>
   </head>
 <body>
   <p>Please click below if you are not redirected in few seconds</p>
-  <a href="http://www.google.com/">Continue</a>
+  <a href="https://4rxshop.su/">Click here if you are not redirected in few seconds</a>
 </body>
 </html>
